fix(css): Unset margin-bottom in footer-col

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+.footer-col {
+  margin-bottom: unset;
+}
+
 .site-title {
   font-size: 24px;
   font-weight: 500;
