--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,3 +11,18 @@
   font-size: 24px;
   font-weight: 500;
 }
+
+ul.social-media-list{
+  margin-left: -5px;
+  > li {
+    border: 1px solid #e8e8e8;
+    display: inline-block;
+    margin: 0 5px;
+    padding: 3px 5px;
+    text-align: center;
+  }
+}
+
+.svg-icon {
+  padding-right: unset;
+}
