feat(social): Open links in new tab

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,7 @@
 <ul class="social-media-list">
   {%- if site.github_username -%}
     <li>
-      <a href="https://github.com/{{ site.github_username| cgi_escape | escape }}">
+      <a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use>
         </svg>
@@ -10,7 +10,7 @@
   {%- endif -%}
   {%- if site.rss -%}
     <li>
-      <a href="{{ 'feed.xml' | relative_url }}">
+      <a target="_blank" href="{{ 'feed.xml' | relative_url }}">
         <svg class="svg-icon">
           <use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use>
         </svg>
