--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,23 @@
 
 @import "{{ site.theme }}";
 
+ul.blog-nav{
+  align-items:center;
+  border-bottom: 1px solid #e8e8e8;
+  display:flex;
+  justify-content: center;
+  list-style-type: none;
+  margin: 0 0 20px 0;
+  padding: 0;
+  width: 100%;
+  & > li {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align:center;
+    width: 33%;
+  }
+}
+
 .greater-icon {
   height: 100%;
   width: 1.05rem;
