feat(category): Implement category list

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,14 @@ ul.blog-nav{
   }
 }
 
+.category-head {
+  font-size: 24px;
+}
+
+.category-item {
+  font-size: 20px;
+}
+
 .greater-icon {
   height: 100%;
   width: 1.05rem;
