--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,6 +32,11 @@ ul.blog-nav{
   font-size: 20px;
 }
 
+.comments {
+  border-top: 1px solid #e8e8e8;
+  padding-top: 30px;
+}
+
 .greater-icon {
   height: 100%;
   width: 1.05rem;
