--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,5 +24,17 @@ layout: default
     {{ content }}
   </div>
 
+  {%- if site.isso -%}
+  <!-- begin isso -->
+    <div class="comments">
+      <section
+        id="isso-thread"
+        data-title="{{ page.title }}"
+        data-isso-id="{{ page.url | relative_url }}">
+      </section>
+    </div>
+  <!-- end isso -->
+  {%- endif -%}
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
