--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,9 +13,9 @@
               {{ site.title | escape }}
             {%- endif -%}
           </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+          <li>
+            {%- include email.html -%}
+          </li>
         </ul>
       </div>
 
