fix(read-time): Use ceil of fractional value

--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -3,6 +3,6 @@
   {% if words < 300 %}
     1 min
   {% else %}
-    {{ words | divided_by:240 }} mins
+    {{ words | divided_by:240.0 | ceil }} min
   {% endif %}
 </span>
