--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
         </span>
       {%- endif -%}
       • {% include category.html %}
-      — {% include read_time.html %}
+      — {% include read_time.html content=content %}
     </p>
   </header>
 
