--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,4 +1,4 @@
 <span class="reading-time" title="Estimated read time">
-  {% assign words = content | number_of_words %}
+  {% assign words = include.content | number_of_words %}
   {{ words | divided_by:240.0 | ceil }} min
 </span>
