--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <a class="post-back" href="{{ site.baseurl }}/blog/">
+    <a class="post-back" href="{{ site.baseurl }}/{{ site.relativeurl.blog }}/">
       &larr;
       <span>Back</span>
     </a>
